Fix icon alignment

--- a/src/nav/index.css
+++ b/src/nav/index.css
@@ -48,7 +48,7 @@
     width: 16px;
     height: 16px;
     vertical-align: top;
-    margin: 1px -7px 0;
+    margin: 2px -8px 0;
     opacity: .85;
 }
 .discovery-nav .view-nav-button[data-name="inspect"][data-suspend-seconds]::before {
